Wed Jul 30 13:17:35 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove unused macros.

Tue Jul 29 22:21:37 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (hash2olerec): ignore WIN32OLE_RECORD
	  instance variable if the variable is nil.

Tue Jul 29 19:43:27 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (folerecord_method_missing): refactoring.
	  divide functionality of folerecord_method_missing into
	  olerecord_ivar_set and olerecord_ivar_get.

Mon Jul 28 20:20:08 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win23ole.c (folerecord_method_missing): support
	  setter of member of WIN32OLE_RECORD object.

Mon Jul 28 06:37:19 2014  Zachary Scott  <e@zzak.io>

	* vm_eval.c: [DOC] Fix rdoc formatting of patch from [Bug #9551]

Mon Jul 28 06:34:43 2014  Zachary Scott  <e@zzak.io>

	* vm_eval.c: [DOC] [Bug #9551] Improve clarity of Kernel::catch
	  documentation, patch by Jesse Sielaff.

Mon Jul 28 06:24:54 2014  Zachary Scott  <e@zzak.io>

	* lib/uri/common.rb: [DOC] [Bug #9563] Recommend using URI.escape
	  before parsing a uri to avoid invalid characters. Reported by
	  Evgeniy Serykh.

Mon Jul 28 05:55:56 2014  Zachary Scott  <e@zzak.io>

	* time.c: [DOC] Clarify %Y in strftime, which can accept any digits
	  and will output at least 4 digits as the year. Reported by Yury
	  Trofimenko [Bug #10049]

	* lib/time.rb: ditto

Mon Jul 28 05:32:06 2014  Zachary Scott  <e@zzak.io>

	* lib/uri/common.rb: [DOC] [Bug #10075] Clarify how URI.join arguments
	  are handled by RFC3986, originally reported by John Feminella.

Mon Jul 28 05:21:41 2014  Zachary Scott  <e@zzak.io>

	* file.c: [DOC] Clarify how File.file? handles symbolic links. Also
	  cleaned up the rdoc style for this method, more to follow.
	  Originally reported by Michael Renner [Bug #10067]

Mon Jul 28 05:12:22 2014  Zachary Scott  <e@zzak.io>

	* time.c: [DOC] Remove dead link and old bug report, which hasn't been