@@ -1,3 +1,11 @@
+Wed Jul 30 21:29:39 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole.c (ole_invoke): pass WIN32OLE_RECORD variant
+	  by reference when invoke OLE methods at first.
+
+	* ext/win32ole/win32ole.c (olerecord_set_ivar): release
+	  IRecordInfo interface before setting another IRecordInfo interface.
+
 Wed Jul 30 13:17:35 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: remove unused macros.
